Use auxiliary method to avoid duplicate code